# nix

./: .appveyor.ctest  .dir-locals.el  .editorconfig  .git.cfg.in  .gitignore  .travis.cfg.in  .travis.ctest  .travis.osx.yml  .travis.yml  .unix.ctest  .valgrind.supp  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Contributing.md  Doxyfile  Doxyfile.in  GSoC.md  LICENSE  LICENSE.h5py  Makefile  Makefile.conf.tmpl  Makefile.darwin  README.creole  README.md  Win32.md  annotated.html  annotated.js  appveyor.yml  classes.html  dir_74588a5905435b83ea39ba4d0f7e648e.html  dir_74588a5905435b83ea39ba4d0f7e648e.js  dir_9edf93ab85493fb9604773d01a117006.html  dir_9edf93ab85493fb9604773d01a117006.js  dir_b4d4190d00431d1c139f8a9cc5532f63.html  dir_b4d4190d00431d1c139f8a9cc5532f63.js  dir_fa80cc64b73b2fbdcebc081619660ad8.html  dir_fa80cc64b73b2fbdcebc081619660ad8.js  doxygen.css  dump_plot.gnu  (+79 more)
.github/workflows/: Dockerfile-ub1804  build-test.yml  buildimags.yml  ci.yml  codeql.yml  windows_build.yml
backend/fs/: AttributesFS.cpp  BaseTagFS.cpp  BaseTagFS.hpp  BlockFS.cpp  BlockFS.hpp  DataArrayFS.cpp  DataArrayFS.hpp  DimensionFS.cpp  DimensionFS.hpp  Directory.cpp  Directory.hpp  DirectoryWithAttributes.cpp  DirectoryWithAttributes.hpp  EntityFS.cpp  EntityFS.hpp  EntityWithMetadataFS.cpp  EntityWithMetadataFS.hpp  EntityWithSourcesFS.cpp  EntityWithSourcesFS.hpp  FeatureFS.cpp  FeatureFS.hpp  FileFS.cpp  FileFS.hpp  GroupFS.cpp  GroupFS.hpp  MultiTagFS.cpp  MultiTagFS.hpp  NamedEntityFS.cpp  NamedEntityFS.hpp  PropertyFS.cpp  PropertyFS.hpp  SectionFS.cpp  SectionFS.hpp  SourceFS.cpp  SourceFS.hpp  TagFS.cpp  TagFS.hpp
backend/hdf5/: BaseTagHDF5.cpp  BaseTagHDF5.hpp  BlockHDF5.cpp  BlockHDF5.hpp  DataArrayHDF5.cpp  DataArrayHDF5.hpp  DataFrameHDF5.cpp  DataFrameHDF5.hpp  DimensionHDF5.cpp  DimensionHDF5.hpp  EntityHDF5.hpp  EntityWithMetadataHDF5.cpp  EntityWithMetadataHDF5.hpp  EntityWithSourcesHDF5.cpp  EntityWithSourcesHDF5.hpp  FeatureHDF5.cpp  FeatureHDF5.hpp  FileHDF5.cpp  FileHDF5.hpp  GroupHDF5.cpp  GroupHDF5.hpp  MultiTagHDF5.cpp  NamedEntityHDF5.cpp  NamedEntityHDF5.hpp  PropertyHDF5.cpp  PropertyHDF5.hpp  SectionHDF5.cpp  SectionHDF5.hpp  SourceHDF5.cpp  SourceHDF5.hpp  TagHDF5.cpp  TagHDF5.hpp
cli/: Cli.cpp  Cli.hpp  Exception.hpp
cli/modules/: Dump.cpp  Dump.hpp  IModule.hpp  Validate.cpp  Validate.hpp
cmake/: FindCppUnit.cmake
contrib/: Dockerfile-ub1804  make-env.sh
d0/d1a/: classnix_1_1_block.html  classnix_1_1_block.js
d0/d3f/: util_8hpp.html  util_8hpp_source.html
d0/d4b/: classnix_1_1base_1_1_i_base_tag.html
d0/d6c/: structnix_1_1util_1_1_id_filter.html
d0/d7f/: structnix_1_1util_1_1_type_filter-members.html
d0/db0/: classnix_1_1_section.html  classnix_1_1_section.js
d0/db7/: classnix_1_1_uninitialized_entity.html
d0/dd5/: _property_8hpp.html  _property_8hpp_source.html
d0/df3/: _i_entity_8hpp.html  _i_entity_8hpp_source.html
d0/df5/: classnix_1_1_missing_attr.html  classnix_1_1_missing_attr.js
d1/d05/: classnix_1_1_unsorted_ticks.html
d1/d16/: classnix_1_1base_1_1_i_feature-members.html
d1/d2c/: _group_8hpp.html  _group_8hpp_source.html
d1/d37/: structnix_1_1util_1_1_ids_filter.html
d1/d87/: _source_8hpp.html  _source_8hpp_source.html
d1/d9c/: classnix_1_1base_1_1_i_block-members.html
d1/db6/: classnix_1_1base_1_1_entity_with_sources.html  classnix_1_1base_1_1_entity_with_sources.js
d1/dbc/: classnix_1_1base_1_1_i_feature.html
d1/dd2/: filter_8hpp.html  filter_8hpp_source.html
d1/dd7/: _value_8hpp.html  _value_8hpp.js  (+1 more)
debian/: changelog  control  copyright  gbp.conf  libnix-dev.install  libnix1.install  nix.dirs  rules  shlibs  watch
dockerfiles/: albuild.Dockerfile  archlinux.Dockerfile  ub1804.Dockerfile
docs/: Makefile  _config.yml  annotating.md  annotating.rst  build_win32.rst  conf.py  contact.rst  data_handling.md  data_handling.rst  data_model.md  data_model.rst  ecosystem.rst  eegbase.rst  example_guide.rst  faq.md  faq.rst  file_handling.md  file_handling.rst  finding_things.md  finding_things.rst  getting_started.md  getting_started.rst  index.md  index.rst  inheritance.txt  install_linux.md  install_linux.rst  install_mac.md  install_mac.rst  install_win.md  install_win.rst  installation.rst  neonixio.rst  relacs.rst  release_instructions.md  release_instructions.rst  slicing_and_indices.md  spikeinterface.rst  standardization.md  standardization.rst  (+9 more)
include/: BaseContainer.hpp  Block.hpp  File.hpp  nix.hpp  pandora.hpp
pandora.xcodeproj/: project.pbxproj
src/: BaseContainer.cpp  Block.cpp  BlockIterator.cpp  DataArray.cpp  DataArrayIterator.cpp  DataFrame.cpp  DataIO.cpp  DataSet.cpp  DataTag.cpp  DataType.cpp  DataView.cpp  Dimension.cpp  Dimensions.cpp  EntityWithMetadata.cpp  EntityWithSources.cpp  Feature.cpp  File.cpp  Group.cpp  GroupIterator.cpp  Identity.cpp  MultiTag.cpp  NDArray.cpp  NDBuffer.cpp  NDSize.cpp  NamedEntity.cpp  NamedEntityWithSources.cpp  PandoraEntity.cpp  Property.cpp  PropertyIterator.cpp  ReferenceList.cpp  Representation.cpp  Section.cpp  SectionIterator.cpp  SectionTreeIterator.cpp  Selection.cpp  SimpleTag.cpp  Source.cpp  SourceIterator.cpp  SourceTreeIterator.cpp  Tag.cpp  (+7 more)
test/: BaseTestBaseTag.cpp  BaseTestBaseTag.hpp  BaseTestBlock.cpp  BaseTestBlock.hpp  BaseTestDataAccess.cpp  BaseTestDataAccess.hpp  BaseTestDataArray.cpp  BaseTestDataArray.hpp  BaseTestDataFrame.cpp  BaseTestDataFrame.hpp  BaseTestDimension.cpp  BaseTestDimension.hpp  BaseTestEntity.cpp  BaseTestEntity.hpp  BaseTestEntityWithMetadata.cpp  BaseTestEntityWithMetadata.hpp  BaseTestEntityWithSources.cpp  BaseTestEntityWithSources.hpp  BaseTestFeature.cpp  BaseTestFeature.hpp  BaseTestFile.cpp  BaseTestFile.hpp  BaseTestGroup.cpp  BaseTestGroup.hpp  BaseTestImplContainer.cpp  BaseTestImplContainer.hpp  BaseTestMultiTag.cpp  BaseTestMultiTag.hpp  BaseTestProperty.cpp  BaseTestProperty.hpp  BaseTestReadOnly.cpp  BaseTestReadOnly.hpp  BaseTestSection.cpp  BaseTestSection.hpp  BaseTestSource.cpp  BaseTestSource.hpp  BaseTestTag.cpp  BaseTestTag.hpp  Benchmark.cpp  ImplContainer.d  (+99 more)
(+1200 files in other folders)
